Bug 509326 - Inconsistent terminology: "Close the vault" vs "Lock Vault"
Summary: Inconsistent terminology: "Close the vault" vs "Lock Vault"
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Vaults widget (other bugs)
Version First Reported In: 6.4.1
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-09-09 21:22 UTC by Alexander Potashev
Modified: 2025-09-20 10:02 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2025-09-09 21:22:46 UTC
SUMMARY
Inconsistent terminology: "Close the vault" vs "Lock Vault".

Vault configuration dialog has button "Close the vault" (and related text also using the verb "to close") which does the same as the button "Lock Vault" in the widget. Please converge the terminology - either "to close" everywhere or "to lock / unlock" everywhere.


OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 David Edmundson 2025-09-10 07:25:49 UTC
Seems sensible. Can you make a MR.
Comment 2 Nate Graham 2025-09-18 22:20:24 UTC
Git commit f24adffc3841e03a5415946bbbecfb7808163b5a by Nate Graham.
Committed on 18/09/2025 at 22:18.
Pushed by ngraham into branch 'master'.

Use consistent "lock" and "unlock" terminology everywhere in the UI

Any code reformatting came from clang-format, not me.
FIXED-IN: 6.6.0

M  +2    -2    fileitemplugin/plasmavaultfileitemaction.cpp
M  +3    -3    kded/engine/backends/cryfs/cryfsbackend.cpp
M  +1    -1    kded/engine/fusebackend_p.cpp
M  +46   -54   kded/engine/vault.cpp
M  +1    -1    kded/service.cpp
M  +1    -1    kded/ui/activitieslinkingwidget.ui
M  +2    -2    kded/ui/mountdialog.cpp
M  +1    -1    kded/ui/mountdialog.ui
M  +2    -2    kded/ui/vaultconfigurationdialog.ui

https://invent.kde.org/plasma/plasma-vault/-/commit/f24adffc3841e03a5415946bbbecfb7808163b5a