Use consistent "lock" and "unlock" terminology everywhere in the UI

Any code reformatting came from clang-format, not me.

BUG: 509326
FIXED-IN: 6.6.0